layout fixes and more jump links

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: #fff;
 }
 
 section {
@@ -243,7 +244,7 @@ header {
 .header-short {
     background: url(../images/header-bg.svg) top center no-repeat;
     min-height: 230px;
-    background-size: cover;  
+    background-size: auto auto;  
 }
 
 /* layout */
@@ -253,6 +254,15 @@ header {
     /* max width! */
     padding: 0 2em;
     margin: 0 auto;
+}
+
+.block{
+    display: block;
+}
+
+.pure-u-1, .pure-u-md-1-2, .pure-u-md-1-3{
+    position: relative;
+    z-index: 10;
 }
 
 .pure-u-md-1-3:nth-child(1) {
@@ -286,8 +296,7 @@ header {
     margin-top: 4vw;
     -webkit-transform: skewY(-3deg);
     transform: skewY(-3deg);
-    -webkit-box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 -3px 6px 0 rgba(0,0,0,0.2);
 }
 
 .slopecap-top-down {
@@ -300,9 +309,7 @@ header {
     margin-bottom: -3vw;
     -webkit-transform: skewY(3deg);
     transform: skewY(3deg);
-    -webkit-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.15);
 }
 
 .slopecap-top-up {
@@ -315,9 +322,7 @@ header {
     margin-bottom: -3vw;
     -webkit-transform: skewY(-3deg);
     transform: skewY(-3deg);
-    -webkit-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px -1px 6px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.15);
 
 }
 
@@ -330,8 +335,6 @@ header {
     margin-top: -3vw;
     -webkit-transform: skewY(-3deg);
     transform: skewY(-3deg);
-    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -344,8 +347,6 @@ header {
     margin-top: -3vw;
     -webkit-transform: skewY(3deg);
     transform: skewY(3deg);
-    -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -665,7 +666,7 @@ a h2:hover,
 /* cloud table */
 
 .cloud-table {
-    color: white;
+    color: rgb(54, 54, 54);
     margin-top: 3em;
     margin-bottom: 5em;
     empty-cells: hide;
@@ -673,22 +674,23 @@ a h2:hover,
 
 .cloud-table th {
     text-align: left;
-    padding: 1em;
-    border-bottom: 2px solid white;
+    vertical-align: top;
+    padding: 0.25em 1em 0.25em 1em;
+    border-bottom: 2px solid #7306ff;
 }
 
 .cloud-table tr {
     padding: 0.5em;
-    border-bottom: 1px solid #bfbfbf6e;
+    border-bottom: 1px solid #7306ff;
 }
 
 .cloud-table tr:hover {
-    background-color: #ffffff6e; 
-    border-bottom: none;
+    background-color: #efefef; 
 }
 
 .cloud-table td {
-    padding: 1em;
+    padding: 0.25em 1em 0.25em 1em;
+    font-size: 0.9em;
 }
 
 /* TPC barcharts */
